[project]
name = "discover"
version = "0.1.0"
description = "Implementation of discover goal selection strategy."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = "==3.10.*"
dependencies = [
  "setuptools<70",
  "protobuf==3.20.3",
  "scipy<1.13",
  "jax[cuda11_pip]==0.4.23",        # Bundles its own CUDA 12 and cuDNN
  "nvidia-cudnn-cu12",
  "nvidia-nvjitlink-cu12",
  "brax==0.9.2",
  "mujoco==2.3.7",
  "flax>=0.8.3",
  "matplotlib==3.8.4",
  "numpy<2",
  "scipy>=1.12",
  "tyro>=0.9.16",
  "wandb",
  "wandb-osh",
  "pyinstrument",
]

[project.scripts]
discover = "run:cli"

[tool.uv]
# This tells uv to use the standard PyPI and the JAX-specific index
index-strategy = "unsafe-best-match"
find-links = [ "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html" ]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = [ "run" ]

[tool.setuptools.package-data]
"jaxgcrl.envs" = ["**/assets/*"]

[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
